Assets/style.css
@font-face {
    font-family: ;
    src: url(Assets\Font\mesmerize-sc-bk.ttf);
}
body{
    font-family: system-ui, system-ui, sans-serif;
}
.right{
   display: flex;
   justify-content: flex-end;
}
.dot_div{
    position: relative;
    display: inline;
    margin-top: 8px;
    font-size: 15px;
    
}
.dot{
  width: 15px;
}
.cover{
    margin: 0 auto;
}
.cover_image{
    margin-left: px; 
}
.cover_discription{
     display: flex;
     align-items: center;
}
.discriprion_div{
    display: block !important;
    background-color: #f8fbf5;
    border-radius: 5px;
}
.discriprion_div>.history{
    color: coral;
}
.discriprion_div>h1{
    font-size: 60px;
}
.discriprion_div>p{
    font-size: 15px;
    margin: 0 auto;
}
.image_div{
    display: flex;
    justify-content: center;
}
.image_div>img{
    width: 100%;
}
.btn_started{
    float: right;
    display: inline-flex;'
    box-shadow: 2px 5px;
    
}
.input{
    width: 100% !important;
    display: inline-flex;
    margin-top: 20px;
}
.input>input{
    border-radius: 40px;
    width: 50px;
}
.shef_image{
    width: 100%;
    border-radius: 5px;
    background-color: #f8fbf5;
}
.welcome{
    color: coral;
    font-size: 15px;
}
.btn_explore{
    margin-top: 10px;
    padding: 10px !important;
    font-size: 12px !important;
}
.question{
    text-align: center;
    margin: 20px auto;
}
.question>p{
    color: rgb(245, 117, 32);
    font-size: 20px;
}
.mycard>img{
    margin: 10px auto;
    width: 50px;
}
.mycard{
    text-align: center;
    padding-top: 20px;
    background-color: #f8fbf5;
    border-radius: 5px;
    cursor: pointer;
    padding-bottom: 20px;
}
.mycard:hover{
    border-bottom: 5px solid rgb(140, 187, 69);
    padding-bottom: 15px;
}
.menu{
    display: flex;
    padding: 20px;
}
.menu>ol>li{
    list-style-type: none;
    padding-left: 10px;
    margin: 10px;
    font-size: 13px;
    cursor: pointer;
    padding-top: 10px;
    padding-bottom: 10px;
    border-left: 5px solid rgb(241, 241, 241);
    transition: 1s;
    margin-left: 0;
}
.menu>ol>li:hover{
    color: rgb(245, 117, 32);
    border-left: 5px solid rgb(245, 117, 32);
    padding-left: 5px;
}
.menu>ol{
    align-items: center;
    padding-left: 0;
}
.mycard1>p{
    color: rgb(245, 117, 32);
    font-size: 11px;
}
.mycard1{
    text-align: center;
    padding-top: 20px;
    background-color: #f8fbf5;
    border-radius: 5px;
    cursor: pointer;
    padding-bottom: 20px;
}
.mycard1>.prise{
    color: rgb(140, 187, 69);
    font-size: 20px;
}
.mycard1>.prise>del{
    color: rgb(196, 196, 196);
    font-size: 15px;
}
.mycard1:hover{
    border-bottom: 5px solid rgb(140, 187, 69);
    padding-bottom: 15px;
}
.mycard1>img{
    width: 100%;
    margin: 0 auto;
}
.mycard1>.bread{
    width: 89%;
    margin: 0 auto;
}
.mycard2{
    text-align: left;
    padding-top: 20px;
    background-color: #f8fbf5;
    border-radius: 5px;
    cursor: pointer;
    padding-bottom: 20px;
}
.mycard2:hover{
    border-bottom: 5px solid rgb(140, 187, 69);
    padding-bottom: 15px;
}
.mycard2>img{
    width: 100%;
    border-radius: 8px;
}
.mycard2>.tikka{
    width: 90%;
    border-radius: 8px;
}
.subscribe>.address{
    width: 500px;
    height: 40px ;
    border-radius: 50px;
}
.subscribe{
    display: flex;
    justify-content: center;
}
.btn_explore1{
    margin-top: 0;
    height: 40px !important;
    width: 40px !important ;
    border-radius: 100px !important ;
}
.btn_explore2{
    margin-top: 0;
    height: 40px !important;
    width: 40px !important ;
    border-radius: 5px !important ;
}
.footer{
    margin-top: 100px;
}
.list>ul>li{
    list-style-type: none;
    cursor: pointer;
    padding-bottom: 10px;
}
.list{
    display: flex;
    justify-content: center;
}
.logo2>p{
    margin-top: 10px;
}

